# mellon

./: .gitignore  .space.kts  Dockerfile  README.md  package.json
contract/: Cargo.toml  deploy.sh
contract/.cargo/: config
contract/src/: lib.rs  messages.rs
frontend/: package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.js  index.js  near-wallet.js  routes.js
frontend/src/assets/: common.css  gradient.css  index.css  var.css
frontend/src/assets/image/avatars/: 1.avif
frontend/src/components/account/: AccountBg.jsx  AccountInfo.jsx  account.css
frontend/src/components/home/: HomeFact.jsx  HomeFactImage.jsx  HomeFactTextBlock.jsx  HomeFacts.jsx  HomeFotter.jsx  HomeHeader.jsx  HomeJoin.jsx  home.css
frontend/src/components/loader/: Loader.js  loader.css
frontend/src/components/messanger/: AllChats.jsx  ChatItem.jsx  messanger.css
frontend/src/components/nav/: Header.jsx  HeaderSearch.jsx  NavItem.jsx  Sidebar.jsx  nav.css
frontend/src/contract/: account.js  near-interface.js  near-wallet.js
frontend/src/layout/: DefaultLayout.jsx  default-layout.css
frontend/src/pages/: Account.jsx  Home.jsx  Messanger.jsx
